[package]
name = "gamingchair"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
eframe = "0.32.1"
egui = "0.32.1"
egui_extras = { version = "0.32.1", features = ["image", "svg", "svg_text"] }
env_logger = "0.11.8"
image = { version = "0.25.6", features = ["png"] }
log = "0.4.27"
memflow = "0.2.3"


[build-dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
vergen-gitcl = { version = "1.0.0", features = ["build", "cargo", "rustc"] }
